Check in code to handle short circuit

--- a/EmqxLearning.RabbitMqConsumer/appsettings.json
+++ b/EmqxLearning.RabbitMqConsumer/appsettings.json
@@ -36,9 +36,7 @@
     "BatchSize": 1000
   },
   "ResilienceSettings": {
-    "InitialConnectionErrors": {
-      "DelaySecs": 5
-    },
+    "CircuitBreakerReconnectAfter": 60000,
     "ConnectionErrors": {
       "DelaySecs": 15
     },
