--- a/EmqxLearning.MqttListener/appsettings.json
+++ b/EmqxLearning.MqttListener/appsettings.json
@@ -15,9 +15,11 @@
   },
   "ReceiveDelay": 0,
   "ProcessingTime": 0,
-  "ProcessingThreads": 1,
-  "ConcurrencyLimit": 1000,
-  "BackgroundProcessing": false,
+  "NumberOfConnections": 1,
+  "InitialConcurrencyLimit": 1,
+  "BackgroundProcessing": true,
+  "ScaleFactor": 50,
+  "ScaleCheckInterval": 5000,
   "RabbitMqClient": {
     "HostName": "localhost",
     "UserName": "admin",
