--- a/EmqxLearning.MqttListener/appsettings.json
+++ b/EmqxLearning.MqttListener/appsettings.json
@@ -30,7 +30,9 @@
     "NetworkRecoveryInterval": "00:00:15",
     "SocketReadTimeout": "00:00:15",
     "SocketWriteTimeout": "00:00:15",
-    "RequestedHeartbeat": "00:00:15"
+    "RequestedHeartbeat": "00:00:15",
+    "MaxMessageSize": 10485760,
+    "RequestedFrameMax": 10485760
   },
   "ResilienceSettings": {
     "CircuitBreakerReconnectAfter": 60000,
