--- a/EmqxLearning.MqttListener/appsettings.json
+++ b/EmqxLearning.MqttListener/appsettings.json
@@ -34,6 +34,10 @@
     "MaxMessageSize": 10485760,
     "RequestedFrameMax": 10485760
   },
+  "RabbitMqChannel": {
+    "PublisherConfirmTimeout": "00:00:05",
+    "PublisherConfirmBatchSize": 30
+  },
   "ResilienceSettings": {
     "CircuitBreakerReconnectAfter": 60000,
     "ConnectionErrors": {
