--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,9 +25,9 @@ services:
       ScaleFactor: 50
       ScaleCheckInterval: 5000
       RabbitMqClient__HostName: rabbitmq1
-      RabbitMqClient__MaxMessageSize: 524288
-      RabbitMqClient__RequestedFrameMax: 524288
-      RabbitMqChannel__PublisherConfirmBatchSize: 30
+      # RabbitMqClient__MaxMessageSize: 524288
+      # RabbitMqClient__RequestedFrameMax: 524288
+      RabbitMqChannel__PublisherConfirmBatchSize: 128
     networks:
       - emqx-bridge
     deploy:
@@ -35,7 +35,7 @@ services:
       resources:
         limits:
           cpus: "1"
-          memory: "500M"
+          memory: "250M"
     depends_on:
       emqx1:
         condition: service_healthy
@@ -92,7 +92,7 @@ services:
       resources:
         limits:
           cpus: "4"
-          memory: "500M"
+          memory: "250M"
     depends_on:
       rabbitmq1:
         condition: service_healthy
@@ -148,7 +148,7 @@ services:
     environment:
       - "EMQX_NODE_NAME=emqx@node1.emqx.io"
       - "EMQX_MQTT__MAX_MQUEUE_LEN=1000000"
-      - "EMQX_MQTT__MAX_INFLIGHT=128"
+      - "EMQX_MQTT__MAX_INFLIGHT=516"
       # - "EMQX_CLUSTER__DISCOVERY_STRATEGY=static"
       # - "EMQX_CLUSTER__STATIC__SEEDS=[emqx@node1.emqx.io,emqx@node2.emqx.io]"
     healthcheck:
@@ -175,7 +175,7 @@ services:
   #   environment:
   #     - "EMQX_NODE_NAME=emqx@node2.emqx.io"
   #     - "EMQX_MQTT__MAX_MQUEUE_LEN=1000000"
-  #     - "EMQX_MQTT__MAX_INFLIGHT=128"
+  #     - "EMQX_MQTT__MAX_INFLIGHT=516"
   #     - "EMQX_CLUSTER__DISCOVERY_STRATEGY=static"
   #     - "EMQX_CLUSTER__STATIC__SEEDS=[emqx@node1.emqx.io,emqx@node2.emqx.io]"
   #   healthcheck:
