Check  in code to handle dup and refactor

--- a/EmqxLearning.MqttListener/appsettings.json
+++ b/EmqxLearning.MqttListener/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "Redis": "localhost:6379,allowAdmin=true,syncTimeout=10000,asyncTimeout=10000"
+  },
   "MqttClientOptions": {
     "TcpServer": "localhost",
     "CleanSession": false,
@@ -13,13 +16,24 @@
     "Topic": "$share/ahi/projectId/+/devices/+/telemetry",
     "QoS": 1
   },
-  "ReceiveDelay": 0,
-  "ProcessingTime": 0,
-  "NumberOfConnections": 1,
-  "InitialConcurrencyLimit": 1,
-  "BackgroundProcessing": true,
-  "ScaleFactor": 50,
-  "ScaleCheckInterval": 5000,
+  "AppSettings": {
+    "ReceiveDelay": 0,
+    "ProcessingTime": 0,
+    "NumberOfConnections": 1,
+    "InitialConcurrencyLimit": 1,
+    "BackgroundProcessing": true,
+    "ScaleFactor": 50,
+    "ScaleCheckInterval": 5000,
+    "MovingAverageRange": 20,
+    "ConcurrencyCollectorInterval": 250,
+    "CircuitLockTimeout": "00:00:03",
+    "ShutdownWait": 3000,
+    "AcceptedAvailableConcurrency": 10,
+    "AcceptedQueueCount": 5,
+    "HashExpiryTime": "24:00:00",
+    "FlushBatchInterval": 500,
+    "CheckDuplicates": true
+  },
   "RabbitMqClient": {
     "HostName": "localhost",
     "UserName": "admin",
