--- a/EmqxLearning.Shared/EmqxLearning.Shared.csproj
+++ b/EmqxLearning.Shared/EmqxLearning.Shared.csproj
@@ -6,11 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FLS" Version="1.1.6" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Polly.Core" Version="8.3.1" />
-    <PackageReference Include="System.Threading.RateLimiting" Version="8.0.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+    <PackageReference Include="StackExchange.Redis" Version="2.2.88" />
   </ItemGroup>
 
   <ItemGroup>
