--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -148,12 +148,14 @@ services:
     image: emqx/emqx:5.6.0
     container_name: emqx1
     environment:
-      - "EMQX_NODE_NAME=emqx@node1.emqx.io"
-      - "EMQX_MQTT__MAX_MQUEUE_LEN=1000000"
-      - "EMQX_MQTT__MAX_INFLIGHT=256"
-      - "EMQX_MQTT__RETRY_INTERVAL=300s"
-      # - "EMQX_CLUSTER__DISCOVERY_STRATEGY=static"
-      # - "EMQX_CLUSTER__STATIC__SEEDS=[emqx@node1.emqx.io,emqx@node2.emqx.io]"
+      EMQX_DASHBOARD__DEFAULT_USERNAME: "admin"
+      EMQX_DASHBOARD__DEFAULT_PASSWORD: "abc@123"
+      EMQX_NODE_NAME: "emqx@node1.emqx.io"
+      EMQX_MQTT__MAX_MQUEUE_LEN: 1000000
+      EMQX_MQTT__MAX_INFLIGHT: 256
+      EMQX_MQTT__RETRY_INTERVAL: "300s"
+      # EMQX_CLUSTER__DISCOVERY_STRATEGY: static
+      # EMQX_CLUSTER__STATIC__SEEDS: "[emqx@node1.emqx.io,emqx@node2.emqx.io]"
     healthcheck:
       test: ["CMD", "/opt/emqx/bin/emqx", "ctl", "status"]
       interval: 5s
@@ -176,12 +178,14 @@ services:
   #   image: emqx/emqx:5.6.0
   #   container_name: emqx2
   #   environment:
-  #     - "EMQX_NODE_NAME=emqx@node2.emqx.io"
-  #     - "EMQX_MQTT__MAX_MQUEUE_LEN=1000000"
-  #     - "EMQX_MQTT__MAX_INFLIGHT=256"
-  #     - "EMQX_MQTT__RETRY_INTERVAL=300s"
-  #     - "EMQX_CLUSTER__DISCOVERY_STRATEGY=static"
-  #     - "EMQX_CLUSTER__STATIC__SEEDS=[emqx@node1.emqx.io,emqx@node2.emqx.io]"
+  #     EMQX_DASHBOARD__DEFAULT_USERNAME: "admin"
+  #     EMQX_DASHBOARD__DEFAULT_PASSWORD: "abc@123"
+  #     EMQX_NODE_NAME: "emqx@node2.emqx.io"
+  #     EMQX_MQTT__MAX_MQUEUE_LEN: 1000000
+  #     EMQX_MQTT__MAX_INFLIGHT: 256
+  #     EMQX_MQTT__RETRY_INTERVAL: "300s"
+  #     EMQX_CLUSTER__DISCOVERY_STRATEGY: static
+  #     EMQX_CLUSTER__STATIC__SEEDS: "[emqx@node1.emqx.io,emqx@node2.emqx.io]"
   #   healthcheck:
   #     test: ["CMD", "/opt/emqx/bin/emqx", "ctl", "status"]
   #     interval: 5s
