Add graceful shutdown by handling all remaining messages before terminating

--- a/EmqxLearning.MqttListener/appsettings.json
+++ b/EmqxLearning.MqttListener/appsettings.json
@@ -32,7 +32,9 @@
     "AcceptedQueueCount": 5,
     "HashExpiryTime": "24:00:00",
     "FlushBatchInterval": 500,
-    "CheckDuplicates": true
+    "CheckDuplicates": true,
+    "CheckLastMessageRangeInSecs": 5,
+    "ShutdownTimeout": "01:00:00"
   },
   "RabbitMqClient": {
     "HostName": "localhost",
