--- a/EmqxLearning.CoapPublisher/EmqxLearning.CoapPublisher.csproj
+++ b/EmqxLearning.CoapPublisher/EmqxLearning.CoapPublisher.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CoAP.NET.Core" Version="1.1.0" />
+    <PackageReference Include="CoAPnet" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EmqxLearning.Shared\EmqxLearning.Shared.csproj" />
   </ItemGroup>
 </Project>
