--- a/EmqxLearning.MqttPublisher/EmqxLearning.MqttPublisher.csproj
+++ b/EmqxLearning.MqttPublisher/EmqxLearning.MqttPublisher.csproj
@@ -9,4 +9,8 @@
   <ItemGroup>
     <PackageReference Include="MQTTnet" Version="4.3.3.952" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EmqxLearning.Shared\EmqxLearning.Shared.csproj" />
+  </ItemGroup>
 </Project>
