--- a/EmqxLearning.MqttListener/appsettings.json
+++ b/EmqxLearning.MqttListener/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Redis": "localhost:6379,allowAdmin=true,syncTimeout=10000,asyncTimeout=10000"
+    "Redis": "127.0.0.1:6379,allowAdmin=true,syncTimeout=10000,asyncTimeout=10000"
   },
   "MqttClientOptions": {
     "TcpServer": "localhost",
