Improve fuzzy controller

--- a/EmqxLearning.MqttListener/appsettings.json
+++ b/EmqxLearning.MqttListener/appsettings.json
@@ -29,6 +29,7 @@
     "CircuitLockTimeout": "00:00:03",
     "ShutdownWait": 3000,
     "AcceptedAvailableConcurrency": 10,
+    "IdealUsage": 0.75,
     "AcceptedQueueCount": 5,
     "HashExpiryTime": "24:00:00",
     "FlushBatchInterval": 500,
