--- a/EmqxLearning.MqttListener/appsettings.json
+++ b/EmqxLearning.MqttListener/appsettings.json
@@ -9,7 +9,12 @@
     "Redis": "127.0.0.1:6379,allowAdmin=true,syncTimeout=10000,asyncTimeout=10000"
   },
   "MqttClientOptions": {
-    "TcpServer": "localhost",
+    "Tcp": {
+      "Server": "localhost",
+      "NoDelay": true,
+      "BufferSize": 40960
+    },
+    "KeepAlivePeriod": "00:01:00",
     "CleanSession": false,
     "SessionExpiryInterval": 600,
     "ReconnectDelaySecs": 15,
@@ -20,22 +25,47 @@
     "ReceiveDelay": 0,
     "ProcessingTime": 0,
     "NumberOfConnections": 1,
-    "InitialConcurrencyLimit": 1,
     "BackgroundProcessing": true,
-    "ScaleFactor": 50,
-    "ScaleCheckInterval": 5000,
-    "MovingAverageRange": 20,
-    "ConcurrencyCollectorInterval": 250,
     "CircuitLockTimeout": "00:00:03",
     "ShutdownWait": 3000,
-    "AcceptedAvailableConcurrency": 10,
-    "IdealUsage": 0.75,
-    "AcceptedQueueCount": 5,
     "HashExpiryTime": "24:00:00",
     "FlushBatchInterval": 500,
     "CheckDuplicates": true,
     "CheckLastMessageRangeInSecs": 5,
     "ShutdownTimeout": "01:00:00"
+  },
+  "RateScaling": {
+    "ScaleCheckInterval": 5000,
+    "Parameters": {
+      "TaskLimiter": {
+        "ScaleFactor": 50,
+        "IdealUsage": 0.75,
+        "AcceptedAvailablePercentage": 0.2,
+        "AcceptedQueueCount": 5
+      },
+      "SizeLimiter": {
+        "ScaleFactor": 50000,
+        "IdealUsage": 0.75,
+        "AcceptedAvailablePercentage": 0.2,
+        "AcceptedQueueCount": 1000
+      }
+    },
+    "RateCollectorOptions": {
+      "MovingAverageRange": 20,
+      "Interval": 250
+    }
+  },
+  "TaskLimiter": {
+    "Name": "TaskLimiter",
+    "InitialLimit": 8,
+    "AvailableCores": 8,
+    "TargetCpuUtil": 0.75,
+    "WaitTime": 500,
+    "ServiceTime": 2
+  },
+  "SizeLimiter": {
+    "Name": "SizeLimiter",
+    "InitialLimit": 4000
   },
   "RabbitMqClient": {
     "HostName": "localhost",
