Check in code simulate memory

--- a/EmqxLearning.MqttListener/appsettings.json
+++ b/EmqxLearning.MqttListener/appsettings.json
@@ -26,6 +26,7 @@
     "ProcessingTime": 0,
     "NumberOfConnections": 1,
     "BackgroundProcessing": true,
+    "SimulateLargeMemoryUsage": false,
     "CircuitLockTimeout": "00:00:03",
     "ShutdownWait": 3000,
     "HashExpiryTime": "24:00:00",
