--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@
 services:
   # MQTT listeners
   mqtt-listener-1:
-    image: emqx-learning/mqtt-listner:latest
+    image: emqx-learning/mqtt-listener:simulate-memory
     # logging:
     #   driver: none
     build:
@@ -24,6 +24,7 @@ services:
       AppSettings__ProcessingTime: 20
       AppSettings__NumberOfConnections: 20
       AppSettings__BackgroundProcessing: true
+      AppSettings__SimulateLargeMemoryUsage: true
       AppSettings__CheckDuplicates: true
 
       TaskLimiter__InitialLimit: 8
