--- a/EmqxLearning.MqttListener/appsettings.json
+++ b/EmqxLearning.MqttListener/appsettings.json
@@ -32,12 +32,12 @@
     "ShutdownWait": 3000,
     "HashExpiryTime": "24:00:00",
     "FlushBatchInterval": 500,
+    "ResourceMonitorInterval": 5000,
     "CheckDuplicates": true,
     "CheckLastMessageRangeInSecs": 5,
     "ShutdownTimeout": "01:00:00"
   },
   "RateScaling": {
-    "ScaleCheckInterval": 5000,
     "Parameters": {
       "TaskLimiter": {
         "ScaleFactor": 50,
@@ -86,7 +86,7 @@
     "PublisherConfirmBatchSize": 128
   },
   "ResilienceSettings": {
-    "CircuitBreakerReconnectAfter": 60000,
+    "CloseCircuitBreakerAfter": 60000,
     "ConnectionErrors": {
       "DelaySecs": 15
     },
