--- a/EmqxLearning.MqttListener/appsettings.json
+++ b/EmqxLearning.MqttListener/appsettings.json
@@ -26,16 +26,17 @@
     "ProcessingTime": 0,
     "NumberOfConnections": 1,
     "BackgroundProcessing": true,
+    "SimulateLargeMemoryUsage": false,
     "CircuitLockTimeout": "00:00:03",
     "ShutdownWait": 3000,
     "HashExpiryTime": "24:00:00",
     "FlushBatchInterval": 500,
+    "ResourceMonitorInterval": 5000,
     "CheckDuplicates": true,
     "CheckLastMessageRangeInSecs": 5,
     "ShutdownTimeout": "01:00:00"
   },
   "RateScaling": {
-    "ScaleCheckInterval": 5000,
     "Parameters": {
       "TaskLimiter": {
         "ScaleFactor": 50,
@@ -84,7 +85,7 @@
     "PublisherConfirmBatchSize": 128
   },
   "ResilienceSettings": {
-    "CircuitBreakerReconnectAfter": 60000,
+    "CloseCircuitBreakerAfter": 60000,
     "ConnectionErrors": {
       "DelaySecs": 15
     },
