--- a/EmqxLearning.MqttListener/appsettings.json
+++ b/EmqxLearning.MqttListener/appsettings.json
@@ -31,7 +31,8 @@
     "ShutdownWait": 3000,
     "HashExpiryTime": "24:00:00",
     "FlushBatchInterval": 500,
-    "ResourceMonitorInterval": 5000,
+    "ResourceMonitorInterval": 2500,
+    "MaxMemoryUsage": 0.8,
     "CheckDuplicates": true,
     "CheckLastMessageRangeInSecs": 5,
     "ShutdownTimeout": "01:00:00"
